tests/res/match/error_bind_outside_condition.say
// A `~` that binds names is only usable in a condition, not a plain value position.
say d = { x: 1 };
say b = d ~ { x }; // error: a `~` that binds names is only allowed in a condition
